--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <!-- Primary Meta Tags -->
+    <title>Recipe Finder - Make Your Own Food Hero</title>
+    <meta name="title" content="Recipe Finder - Make Your Own Food Hero">
+    <meta name="description" content="Create your own food based on the recipe that provider exclusively for you.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://recipe-finder.pantau-corona.info/">
+    <meta property="og:title" content="Recipe Finder - Make Your Own Food Hero">
+    <meta property="og:description" content="Create your own food based on the recipe that provider exclusively for you.">
+    <meta property="og:image" content="https://recipe-finder.pantau-corona.info/title.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://recipe-finder.pantau-corona.info/">
+    <meta property="twitter:title" content="Recipe Finder - Make Your Own Food Hero">
+    <meta property="twitter:description" content="Create your own food based on the recipe that provider exclusively for you.">
+    <meta property="twitter:image" content="https://recipe-finder.pantau-corona.info/title.jpg">
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +39,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
